Uploaded image for project: 'IMPALA'
  1. IMPALA
  2. IMPALA-2567 KRPC milestone 1
  3. IMPALA-6477

rpc-mgr-kerberized-test fails on CentOS 6.4

    XMLWordPrintableJSON

Details

    Description

      From the Jenkins logs:

      15:25:38 /data/jenkins/workspace/impala-cdh5-trunk-core-data-load/repos/Impala/be/src/rpc/thrift-server-test.cc:176: Failure
      15:25:38 Value of: "No more data to read"
      15:25:38   Actual: "No more data to read"
      15:25:38 Expected: a substring of non_ssl_client.Open().GetDetail()
      15:25:38 Which is: "Couldn't open transport for localhost:55428 (write() send(): Broken pipe)
      15:25:38 "
      15:25:38 [  FAILED  ] KerberosOnAndOff/ThriftKerberizedParamsTest.SslConnectivity/2, where GetParam() = 2 (411 ms)
      15:25:38 [----------] 3 tests from KerberosOnAndOff/ThriftKerberizedParamsTest (894 ms total)
      15:25:38 
      15:25:38 [----------] Global test environment tear-down
      15:25:38 [==========] 17 tests from 6 test cases ran. (1716 ms total)
      15:25:38 [  PASSED  ] 16 tests.
      15:25:38 [  FAILED  ] 1 test, listed below:
      15:25:38 [  FAILED  ] KerberosOnAndOff/ThriftKerberizedParamsTest.SslConnectivity/2, where GetParam() = 2
      15:25:38 
      15:25:38  1 FAILED TEST
      15:25:38   YOU HAVE 1 DISABLED TEST
      

      Any ideas, Sailesh?

      Attachments

        Activity

          People

            sailesh Sailesh Mukil
            alex.behm Alexander Behm
            Votes:
            0 Vote for this issue
            Watchers:
            5 Start watching this issue

            Dates

              Created:
              Updated:
              Resolved: