IMPALA-6477: rpc-mgr-kerberized-test fails on CentOS 6.4

On systems that have Kerberos 1.11 or earlier, service principals with
IP addresses are not supported due to a bug:

http://krbdev.mit.edu/rt/Ticket/Display.html?id=7603

Since our BE tests use such principals, they fail on older platforms with the
above mentioned kerberos versions.

Kudu fixed this by adding a workaround which overrides krb5_realm_override.

https://github.com/cloudera/kudu/commit/ba2ae3de4a7c43ff2f5873e822410e066ea99667

We realized that even though this is linked correctly on older platforms, it does
not turn on until the KUDU_ENABLE_KRB5_REALM_FIX environment variable is set.

This patch sets it only for tests. We DO NOT enable this workaround for live
clusters. The reasoning is that if a user of Impala is using an older
version of kerberos that has a known bug of not being able to handle
numeric IP addresses, then it's not on Impala to fix that issue. We allow
it for tests because we want to be able to run our tests on multiple
platforms.

Change-Id: I7227551aabd1ef4f8e8608fefb74293f9f763e13
Reviewed-on: http://gerrit.cloudera.org:8080/9519
Reviewed-by: Sailesh Mukil <sailesh@cloudera.com>
Tested-by: Impala Public Jenkins